cmake_minimum_required(VERSION 3.10)
project(procon)

set(CMAKE_CXX_STANDARD 14)

add_executable(main abc99_a/main.cpp abc99_b/main.cpp abc99_c/main.cpp ALDS_1_3_D_AreasOnTHeCrossSecDiagram/main.cpp ALDS1_4_D_Allocation/main.cpp ALDS1_6_D_MinimumCostSort/main.cpp ALDS1_7_D_ReconstTree/main.cpp ioi2007_a/main.cpp arc074_d/main.cpp POJ1182/main.cpp)
