cmake_minimum_required(VERSION 3.10)
project(procon)

set(CMAKE_CXX_STANDARD 14)

add_executable(main abc92_c/main.cpp abc92_d/main.cpp abc91_a/main.cpp abc91_b/main.cpp abc91_c/main.cpp abc90_b/main.cpp abc90_c/main.cpp abc90_d/main.cpp CableMasterPOJNo1064/main.cpp AggressiveCowPOJNo2456/main.cpp ANTS_maximize_average/main.cpp JessicaReadingProblemPOJNo3320/main.cpp FaceTheRightWayPOJNo3276/main.cpp abc90_a/FliptilePOJNo3279/main.cpp abc89_a/main.cpp abc89_b/main.cpp abc89_c/main.cpp abc89_d/main.cpp abc88_a/main.cpp abc88_b/main.cpp abc88_c/main.cpp abc88_d/main.cpp abc87_a/main.cpp abc87_b/main.cpp abc87_c/main.cpp abc87_d/main.cpp abc86_a/main.cpp abc86_b/main.cpp abc86_c/main.cpp abc86_d/main.cpp abc85_a/main.cpp abc85_b/main.cpp abc85_c/main.cpp abc85_d/main.cpp abc84_a/main.cpp abc84_b/main.cpp abc84_c/main.cpp abc84_d/main.cpp FaceTheRightWayPOJNo3276/sol.cpp abc18_d/main.cpp agc13_c/main.cpp sandbox/main1.cpp aoj_0529/main.cpp)
